2001-11-09  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-minimal.c (realloc): Handle NULL for first parameter
	correctly.
	* elf/dl-load.c (is_dst): New function.
	(_dl_dst_count): Use is_dst to check for DST variable.
	(_dl_dst_substitute): Likewise.

2001-11-09  Roland McGrath  <roland@frob.com>

	Hurd/PowerPC port contributed by Peter Bruin <pjbruin@dds.nl>.
	* NEWS: Mention it.
	* sysdeps/mach/hurd/powerpc/exc2signal.c: New file.
	* sysdeps/mach/hurd/powerpc/init-first.c: New file.
	* sysdeps/mach/hurd/powerpc/intr-msg.h: New file.
	* sysdeps/mach/hurd/powerpc/longjmp-ts.c: New file.
	* sysdeps/mach/hurd/powerpc/register-dump.h: New file.
	* sysdeps/mach/hurd/powerpc/sigreturn.c: New file.
	* sysdeps/mach/hurd/powerpc/static-start.S: New file.
	* sysdeps/mach/hurd/powerpc/trampoline.c: New file.
	* sysdeps/mach/hurd/powerpc/bits/sigcontext.h: New file.
	* sysdeps/mach/hurd/powerpc/Dist: New file.

	* hurd/privports.c (__get_privileged_ports):
	Only contact the proc server if necessary for this call.
	Suggested by Neal H Walfield <neal@cs.uml.edu>.
	Check error return for mach_port_mod_refs.

2001-11-09  Andreas Schwab  <schwab@suse.de>

	* sysdeps/unix/sysv/linux/m68k/bits/resource.h: New file.

2001-11-09  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (lose): Remove some unnecessary code.  The new
	object is always the last in the list.
	(_dl_map_object_from_fd): Delete code to remove from object list
	when DF_1_NOOPEN is seen.  This is done in lose.

2001-11-08  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-object.c (_dl_new_object): Various small optimizations.

2001-11-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/dl-cache.c: Optimize SEARCH_CACHE and
	HWCAP_CHECK macro code.

	* elf/dl-misc.c (_dl_sysdep_read_whole_file): Optimize code a bit.
	Now returns MAP_FAILED on error.
	* elf/rtld.c: Adjust caller.
	* sysdeps/generic/dl-cache.c: Likewise.
	* sysdeps/generic/ldsodefs.h: Adjust description.
