@@ -8,8 +8,8 @@ Please send GNU C library bug reports using the `glibcbug' script to
 
 Version 2.2.5
 
-* Stephen Moshier implemented powl and cbrtl for the 128-bit
-  long double format.
+* Stephen Moshier implemented log2, log10, powl and cbrtl for the
+  128-bit long double format.
 
 * Masahide Washizawa contributed iconv modules for IBM1132, IBM1133, IBM1160,
   IBM1161, and IBM1162 charsets.
